[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Personajes/Prota/Disparo/explosion-3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/explosion-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/shot-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/explosion-4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/shot-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/explosion-2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Personajes/Prota/Disparo/explosion-5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Personajes/Prota/Sonidos/Shoot.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Personajes/Prota/Scripts/Hit.gd" type="Script" id=9]
[ext_resource path="res://Assets/Personajes/Prota/Sonidos/Explosion.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Explosion"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 2.5 )

[node name="Hit" type="Area2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/RESET = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -0.5 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 10, 0 )
rect = Rect2( -10, -3, 6, 5 )

[node name="Sonidos" type="Position2D" parent="."]

[node name="Explosion" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="Disparo" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 8 )
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_Hit_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
